Adds complete nature code, with timing added

--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,5 @@
 inst/doc
+.RHistory
 .Rproj*
 .DS_Store
 *.png
@@ -6,8 +7,11 @@ inst/doc
 *.so
 *.tmp
 *.csv
+*.npy
+*.index
 *.dat
 tests/box_test/.hypothesis/
+handling_missing_data/tmp/
 *.ipynb_checkpoints/
 *.DS_Store
 .RHistory
@@ -21,6 +25,7 @@ tests/profile/
 
 # Byte-compiled / optimized / DLL files
 __pycache__/
+handling_missing_data/__pycache__/
 *.py[cod]
 *$py.class
 
